--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -250,16 +250,16 @@
   "conferenceListPage__title": {
     "string": "Конференции"
   },
-  "container-sermonList__filterLabelAll": {
-    "comment": "sermon list page filter all",
+  "recordingHasVideoFilter__filterAll": {
+    "comment": "recording has video filter all",
     "string": "Все"
   },
-  "container-sermonList__filterLabelAudio": {
-    "comment": "sermon list page filter audio",
+  "recordingHasVideoFilter__filterAudio": {
+    "comment": "recording has video filter audio",
     "string": "Только аудио"
   },
-  "container-sermonList__filterLabelVideo": {
-    "comment": "sermon list page filter video",
+  "recordingHasVideoFilter__filterVideo": {
+    "comment": "recording has video filter video",
     "string": "Видео"
   },
   "copyrightInfos__multipleCopyrightExplanation": {
@@ -1356,7 +1356,7 @@
   "sermonList__heading": {
     "string": "Все темы"
   },
-  "sermonsList__filter": {
+  "recordingHasVideoFilter__filter": {
     "string": "Фильтр"
   },
   "socialLogin__loginFacebookButton": {
