--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -250,16 +250,16 @@
   "conferenceListPage__title": {
     "string": "Konferenzen"
   },
-  "container-sermonList__filterLabelAll": {
-    "comment": "sermon list page filter all",
+  "recordingHasVideoFilter__filterAll": {
+    "comment": "recording has video filter all",
     "string": "Alle"
   },
-  "container-sermonList__filterLabelAudio": {
-    "comment": "sermon list page filter audio",
+  "recordingHasVideoFilter__filterAudio": {
+    "comment": "recording has video filter audio",
     "string": "Nur Audio"
   },
-  "container-sermonList__filterLabelVideo": {
-    "comment": "sermon list page filter video",
+  "recordingHasVideoFilter__filterVideo": {
+    "comment": "recording has video filter video",
     "string": "Video"
   },
   "copyrightInfos__multipleCopyrightExplanation": {
@@ -1356,7 +1356,7 @@
   "sermonList__heading": {
     "string": "Alle Lehren"
   },
-  "sermonsList__filter": {
+  "recordingHasVideoFilter__filter": {
     "string": "Filter"
   },
   "socialLogin__loginFacebookButton": {
