--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -250,16 +250,16 @@
   "conferenceListPage__title": {
     "string": "Conférences"
   },
-  "container-sermonList__filterLabelAll": {
-    "comment": "sermon list page filter all",
+  "recordingHasVideoFilter__filterAll": {
+    "comment": "recording has video filter all",
     "string": "Tous"
   },
-  "container-sermonList__filterLabelAudio": {
-    "comment": "sermon list page filter audio",
+  "recordingHasVideoFilter__filterAudio": {
+    "comment": "recording has video filter audio",
     "string": "Audio uniquement"
   },
-  "container-sermonList__filterLabelVideo": {
-    "comment": "sermon list page filter video",
+  "recordingHasVideoFilter__filterVideo": {
+    "comment": "recording has video filter video",
     "string": "Vidéo"
   },
   "copyrightInfos__multipleCopyrightExplanation": {
@@ -1356,7 +1356,7 @@
   "sermonList__heading": {
     "string": "Tous les enseignements"
   },
-  "sermonsList__filter": {
+  "recordingHasVideoFilter__filter": {
     "string": "Filtre"
   },
   "socialLogin__loginFacebookButton": {
