--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -250,16 +250,16 @@
   "conferenceListPage__title": {
     "string": "大会"
   },
-  "container-sermonList__filterLabelAll": {
-    "comment": "sermon list page filter all",
+  "recordingHasVideoFilter__filterAll": {
+    "comment": "recording has video filter all",
     "string": "全部"
   },
-  "container-sermonList__filterLabelAudio": {
-    "comment": "sermon list page filter audio",
+  "recordingHasVideoFilter__filterAudio": {
+    "comment": "recording has video filter audio",
     "string": "仅音频"
   },
-  "container-sermonList__filterLabelVideo": {
-    "comment": "sermon list page filter video",
+  "recordingHasVideoFilter__filterVideo": {
+    "comment": "recording has video filter video",
     "string": "视频"
   },
   "copyrightInfos__multipleCopyrightExplanation": {
@@ -1356,7 +1356,7 @@
   "sermonList__heading": {
     "string": "所有证道"
   },
-  "sermonsList__filter": {
+  "recordingHasVideoFilter__filter": {
     "string": "筛选"
   },
   "socialLogin__loginFacebookButton": {
