--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -567,7 +567,7 @@
     "comment": "home page testimonies section text",
     "string": "Höre dir die Erfahrungen anderer Nutzer von AudioVerse an."
   },
-  "home__testimoniesTitle": {
+  "home__testimonialsTitle": {
     "comment": "Testimonies slider title",
     "string": "Erfahrungsberichte"
   },
@@ -1964,7 +1964,7 @@
   "header__navItemContact-support": {
     "string": "Technische Unterstützung "
   },
-  "header__navItemContact-testimony": {
+  "header__navItemContact-testimonial": {
     "string": "Erfahrungsbericht"
   },
   "header__navItemContact-twitter": {
@@ -2141,7 +2141,7 @@
   "testimonies__seeAll": {
     "string": "Alle Zeugnisse anzeigen"
   },
-  "testimonies__submitTestimony": {
+  "testimonies__submitTestimonial": {
     "string": "Eine Erfahrung teilen"
   },
   "time__hoursMinutesAndSeconds": {
