--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -567,7 +567,7 @@
     "comment": "página de inicio testimonios sección texto",
     "string": "Conozca a algunos que utilizan AudioVerse."
   },
-  "home__testimoniesTitle": {
+  "home__testimonialsTitle": {
     "comment": "Testimonios título slider",
     "string": "Testimonios"
   },
@@ -1964,7 +1964,7 @@
   "header__navItemContact-support": {
     "string": "Solicitar asistencia"
   },
-  "header__navItemContact-testimony": {
+  "header__navItemContact-testimonial": {
     "string": "Compartir un testimonio"
   },
   "header__navItemContact-twitter": {
@@ -2141,7 +2141,7 @@
   "testimonies__seeAll": {
     "string": "Ver todos los testimonios"
   },
-  "testimonies__submitTestimony": {
+  "testimonies__submitTestimonial": {
     "string": "Envíe un testimonio"
   },
   "time__hoursMinutesAndSeconds": {
