--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -567,7 +567,7 @@
     "comment": "home page testimonies section text",
     "string": "AudioVerseを利用している方々の声"
   },
-  "home__testimoniesTitle": {
+  "home__testimonialsTitle": {
     "comment": "Testimonies slider title",
     "string": "証し"
   },
@@ -1964,7 +1964,7 @@
   "header__navItemContact-support": {
     "string": "技術的内容のお問い合わせ"
   },
-  "header__navItemContact-testimony": {
+  "header__navItemContact-testimonial": {
     "string": "個人的体験の証を共有"
   },
   "header__navItemContact-twitter": {
@@ -2141,7 +2141,7 @@
   "testimonies__seeAll": {
     "string": "全ての証を表示"
   },
-  "testimonies__submitTestimony": {
+  "testimonies__submitTestimonial": {
     "string": "個人体験の証を投稿"
   },
   "time__hoursMinutesAndSeconds": {
