--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2350,6 +2350,9 @@
   "sopnsorTypeLockup_type": {
     "string": "Sponsor"
   },
+  "speaker__avatar": {
+    "string": "Speaker Avatar"
+  },
   "spiritOfAv__title": {
     "string": "Spirit Of AudioVerse"
   },
