--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -872,8 +872,8 @@
   "header__navItemLibrary-playlists": {
     "string": "Playlists"
   },
-  "header__navItemLibrary-saved": {
-    "string": "Saved"
+  "header__navItemLibrary-listenLater": {
+    "string": "Listen Later"
   },
   "header__navItemMore": {
     "comment": "Header nav link name: More",
@@ -1422,8 +1422,8 @@
   "libraryNav__playlists": {
     "string": "Playlists"
   },
-  "libraryNav__saved": {
-    "string": "Saved"
+  "libraryNav__listenLater": {
+    "string": "Listen Later"
   },
   "libraryNav__sort": {
     "string": "Sort"
