--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -1980,7 +1980,7 @@
   "header__navItemLibrary-playlists": {
     "string": "Listas de reproducción"
   },
-  "header__navItemLibrary-saved": {
+  "header__navItemLibrary-listenLater": {
     "string": "Guardado"
   },
   "header__navItemPresenters": {
@@ -2097,7 +2097,7 @@
   "libraryNav__playlists": {
     "string": "Listas de reproducción"
   },
-  "libraryNav__saved": {
+  "libraryNav__listenLater": {
     "string": "Guardado"
   },
   "libraryNav__sort": {
