--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -1979,7 +1979,7 @@
   "header__navItemLibrary-playlists": {
     "string": "プレイリスト"
   },
-  "header__navItemLibrary-saved": {
+  "header__navItemLibrary-listenLater": {
     "string": "図書に保存"
   },
   "header__navItemPresenters": {
@@ -2096,7 +2096,7 @@
   "libraryNav__playlists": {
     "string": "プレイリスト"
   },
-  "libraryNav__saved": {
+  "libraryNav__listenLater": {
     "string": "図書に保存"
   },
   "libraryNav__sort": {
