--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -1976,7 +1976,7 @@
   "header__navItemLibrary-playlists": {
     "string": "Списки воспроизведений"
   },
-  "header__navItemLibrary-saved": {
+  "header__navItemLibrary-listenLater": {
     "string": "Сохранено"
   },
   "header__navItemPresenters": {
@@ -2093,7 +2093,7 @@
   "libraryNav__playlists": {
     "string": "Списки воспроизведений"
   },
-  "libraryNav__saved": {
+  "libraryNav__listenLater": {
     "string": "Сохранено"
   },
   "libraryNav__sort": {
