--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -1979,7 +1979,7 @@
   "header__navItemLibrary-playlists": {
     "string": "播放列表"
   },
-  "header__navItemLibrary-saved": {
+  "header__navItemLibrary-listenLater": {
     "string": "已保存"
   },
   "header__navItemPresenters": {
@@ -2096,7 +2096,7 @@
   "libraryNav__playlists": {
     "string": "播放列表"
   },
-  "libraryNav__saved": {
+  "libraryNav__listenLater": {
     "string": "已保存"
   },
   "libraryNav__sort": {
