--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -617,13 +617,16 @@
     "string": "View help articles"
   },
   "contact__intro": {
-    "string": "We love to hear from our users, even if it’s about technical issues! The feedback you give us encourages to keep up the work and helps us improve things for everyone else. If you’d like to get in touch with us, please use the form with us and we’ll get back to you as quickly as possible."
+    "string": "We love to hear from our users, even if it’s about technical issues! The feedback you give us encourages to keep up the work and helps us improve things for everyone else. If you’d like to get in touch with us, use the form below or write us at our mailing address. We’ll get back with you as quickly as possible."
   },
   "contact__lastNameLabel": {
     "string": "Last name"
   },
   "contact__lastNamePlaceholder": {
     "string": "Doe"
+  },
+  "contact__mailingAddress": {
+    "string": "AudioVerse{br}PO Box 2288{br}Collegedale, TN 37315-2288{br}USA"
   },
   "contact__messageLabel": {
     "string": "Message"
