--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2499,6 +2499,9 @@
     "comment": "time minutes and seconds",
     "string": "{m}:{s}"
   },
+  "topicDetail__count": {
+    "string": "{count, plural, one {# item} other {# items}}"
+  },
   "topicDetail__label": {
     "string": "Topic"
   },
